--- a/src/static/index.html
+++ b/src/static/index.html
@@ -12,13 +12,12 @@
       <!-- Monaco Root -->
       <div id="monaco-editor-root"></div>
     </div>
-    <div class="wrapper">
-      <!-- Monaco Root -->
-      <div id="monaco-editor-root1"></div>
-    </div>
+
+    <div style="text-align:center">
+      <input class="build" type="button" value="get Json" onclick="window.generateAndDisplay()">
+  </div>
 
     <!-- Monaco Configuration -->
     <script type="module" src="setup.js"></script>
-    <script type="module" src="setup1.js"></script>
   </body>
 </html>
