--- a/src/static/index.html
+++ b/src/static/index.html
@@ -4,17 +4,17 @@
     <meta charset="utf-8" />
     <!-- Page & Monaco styling -->
     <link href="styles.css" rel="stylesheet" />
-    <title>MiniLogo in Langium</title>
+    <title>ASCII LD in Langium</title>
   </head>
   <body>
-    <h1>MiniLogo in Langium</h1>
+    <h1>ASCII LD in Langium</h1>
     <div class="wrapper">
       <!-- Monaco Root -->
       <div id="monaco-editor-root"></div>
     </div>
 
     <div style="text-align:center">
-      <input class="build" type="button" value="get Json" onclick="window.generateAndDisplay()">
+      <input class="build" type="button" value="Generate Json" onclick="window.generateAndDisplay()">
   </div>
 
     <!-- Monaco Configuration -->
